# kaban

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yaml
crates/kaban-core/: Cargo.toml
crates/kaban-core/src/: compiler_error.rs  lib.rs  source.rs
crates/kaban-lexer/: Cargo.toml
crates/kaban-lexer/src/: debug.rs  error.rs  lexer.rs  lib.rs  tests.rs  token.rs
crates/kaban-lexer/tests/: tokens.rs
crates/kaban-parser/: Cargo.toml
crates/kaban-parser/src/: ast.rs  debug.rs  errors.rs  lib.rs  node.rs  operator.rs  parser.rs  tests.rs  views.rs
crates/kaban-parser/tests/: errors.rs  expressions.rs  statements.rs  test_macro.rs
crates/kaban-parser/tests/snapshots/: errors__hanging_braces.snap  errors__hanging_infix_operator.snap  errors__missing_parenthesis_on_if.snap  errors__missing_semicolon.snap  errors__missing_single_parenthesis_on_if.snap  errors__semicolon_on_block.snap  errors__semicolon_on_nested_block_expression.snap  expressions__addition_is_left_associative.snap  expressions__anonymous_enum_access.snap  expressions__anonymous_enum_type.snap  expressions__anonymous_func_decl_with_concrete_func_type.snap  expressions__anonymous_func_decl_with_concrete_func_type_and_mut_params.snap  expressions__anonymous_func_decl_with_explicit_types_and_braces.snap  expressions__array_literals_with_trailing_commas.snap  (+188 more)
crates/ledger-lexer/: Cargo.toml
crates/ledger-lexer/src/: error.rs  lexer.rs  lib.rs  tests.rs  token.rs
crates/ledger-parser/: Cargo.toml
crates/ledger-parser/src/: ast.rs  lib.rs  operator.rs  parser.rs
