[package]
name = "kaban"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/kaban-core",
    "crates/kaban-lexer",
    "crates/kaban-parser",
]

[dependencies]
kaban-lexer = { path = "crates/kaban-lexer" }
kaban-parser = { path = "crates/kaban-parser" }

[workspace.dependencies]
thiserror = "2.0.18"
